Fix overflow tablet (#1029)
* Fix tablet overflow

* Fix with videos as well

--- a/assets/styles/components.scss
+++ b/assets/styles/components.scss
@@ -735,7 +735,7 @@
     height: auto;
   }
 
-  @media screen and (max-width: 850px) {
+  @media screen and (max-width: 1280px) {
     iframe,
     video {
       width: 100%;
