--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -30,7 +30,7 @@
     }
     @media screen and (min-width: 1024px) {
       flex-direction: row;
-      max-width: 1280px;
+      //max-width: 1280px;
       margin-left: auto;
       margin-right: auto;
     }
